chsdi/public/GeoAdmin.ux/BodSearch/css/bodsearch.css
.bodsearch {
    white-space: normal;
    font-family: tahoma,arial;
    font-size:11px;
    letter-spacing:0;
    text-align: left;
}

.bodsearch.x-combo-list-item {
    border-top: 1px solid #ddd;
}

.bodsearch .bodsearch_header {
    background-color: #eee;
    margin: 1px;
    padding: 4px;
}

.x-combo-list-item.bodsearch .bodsearch_header {
    background-color: transparent;
}

.bodsearch .bodsearch_footer {
    margin: 1px;
    padding: 4px;
}

.bodsearch .office-provider,
.bodsearch .bod-title {
    margin-bottom: 2px;
}

.bodsearch .bod-title {
    color: red;
}

.bodsearch .office-provider {
    color:red;
    font-style:italic;
    margin-bottom:5px;
    margin-top:1px;
}

.bodsearch .match {
    color: #333;
    background-color: #999;
}

.bodsearch .bodsearch-details {
    float: right;
    width: 17px;
    height: 19px;
    background-image: url(../images/info_button_black.png);
}

.bodsearch table td, .bodsearch table th{
   padding: 0 0 0 5px;    
}

.x-tool-close {
    background-image: url(../images/close_button.png);
    background-position: center center;
}

